# EffectViewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CVFunctions.h  MainWindow.h  NetworkManager.h  ORTFunctions.h  ORTNetworks.h
models/: ModelsConfig.py
src/: CVFunctions.cpp  MainWindow.cpp  NetworkManager.cpp  ORTFunctions.cpp  ORTNetworks.cpp  UI.ui  main.cpp
